src/styles/latest.css
/* ... */
.dl-hero .dl-tag {
  padding: var(--spacing-1);
  background-color: var(--dsdl-cyan-10);
}
.dl-hero .dl-button {
  padding: var(--spacing-1) var(--spacing-3);
  color: var(--button-large-text-color);
  font-size: var(--button-large-font-size);
  font-weight: var(--button-large-font-weight);
}
.dl-hero .dl-button:hover {
  border-color: var(--button-large-hover-border-color);
  background-color: var(--button-large-hover-bg-color);
  color: var(--button-large-hover-text-color);
}
.dl-hero-image > img {
  display: block;
  width: 100%;
  border-radius: 10px;
}

@media (min-width: 992px) {
  .dl-hero {
    padding-top: calc(var(--spacing-base) * 13); /* 6.5rem (104px) */
    padding-bottom: calc(var(--spacing-base) * 22); /* 11rem (176px) */
  }
}

/* COMPARISON BLOCK */

.comparison {
  --bs-gutter-x: var(--spacing-1);
}
.comparison > .col-md {
  margin-bottom: var(--spacing-1);
}
.comparison-box {
  height: 100%;
  padding: 16px;
  border-radius: 8px;
}
.comparison-1 {
  border: 1px solid var(--dsdl-cyan-30);
  background-color: var(--dsdl-cyan-10);
}
.comparison-2 {
  background-color: var(--dsdl-cyan-60);
  color: white;
}
.comparison h3 > svg {
  height: 0.875em;
  margin-right: 0.25em;
  position: relative;
  top: calc(-1.5em / 18); /* adjustment for optical alignment with the text */
}
.comparison ul {
  padding-left: 1.375em;
  margin-bottom: 0;
}

/* RELATED NAV */

.related-nav {
  --bs-gutter-x: var(--spacing-1);
}
.related-nav-link {
  display: flex;
  align-items: center;
  gap: var(--spacing-2);
  height: var(--spacing-15);
  padding: 16px;
  border: 1px solid var(--dsdl-gray-30); /* lighter than standard buttons */
  border-radius: 8px; /* smaller than standard buttons */
  margin-bottom: var(--spacing-1);
  color: var(--button-text-color);
  text-decoration: none;
}
.related-nav-link:focus {
  outline: var(--button-focus-outline);
  outline-offset: var(--button-focus-outline-offset);
}
.related-nav-link:hover {
  border-color: var(--button-hover-border-color);
  background-color: var(--button-hover-bg-color);
}
.related-nav-link:active {
  border-color: var(--button-active-border-color);
  background-color: var(--button-active-bg-color);
  color: var(--button-active-text-color);
}
.related-nav-link > .text {
  flex-grow: 1;
}

/* HEADER */
.header-wrapper {
  box-shadow: 0 var(--spacing-05) var(--spacing-05) rgba(0, 0, 0, 0.04);
}

.header {
  background-color: #fff;
  max-width: calc(var(--spacing-base) * 180); /* don't let the actual content stretch beyond 1440px */
  padding: var(--spacing-3) var(--spacing-2);
}

.global-nav ul {
  gap: var(--spacing-4);
  list-style: none;
  margin: 0;
  padding: 0;
}

@media (min-width: 992px) {
  .header {
    padding: var(--spacing-3) var(--spacing-8);
  }

  .header ul {
    gap: var(--spacing-2);
  }
}

.global-nav a,
.header a.contact {
  border: var(--button-border);
  border-radius: 1em; /* not fully rounded like the default buttons */
  color: var(--button-text-color);
  display: inline-block;
  line-height: var(--line-height-tight);
  padding: var(--spacing-1) 12px;
  text-decoration: none;
}

.global-nav a:focus,
.header a.contact:focus {
  outline: var(--button-focus-outline);
  outline-offset: var(--button-focus-outline-offset);
}

.global-nav a:hover,
.header a.contact:hover {
  border-color: var(--button-hover-border-color);
  background-color: var(--button-hover-bg-color);
}

.global-nav a:active,
.header a.contact:active {
  border-color: var(--button-active-border-color);
  background-color: var(--button-active-bg-color);
  color: var(--button-active-text-color);
}

.header a.contact {
  border: none;
}

.cta-banner {
  background-color: var(--calitp-brand-yellow);
  height: var(--spacing-10);
}

.out-of-service {
  width: 260px;
}

@media (min-width: 768px) {
  .out-of-service {
    width: 424px;
  }
}

.site-logo {
  width: 140px;
}

@media (min-width: 992px) {
  .site-logo {
    width: 160px;
  }
}

/* FOOTER */
.footer-wrapper {
  background-color: var(--dsdl-gray-100);
  width: 100%;
}

.footer {
  color: #fff;
  max-width: calc(var(--spacing-base) * 180); /* don't let the actual footer content stretch beyond 1440px */
  padding: var(--spacing-4) var(--spacing-2) var(--spacing-2);
}

.footer ul {
  list-style-type: none;
  margin: 0;
  padding: 0;
}

.privacy-links ul {
  display: flex;
  gap: var(--spacing-1);
  justify-content: space-between;
}

@media (min-width: 992px) {
  .footer {
    padding: var(--spacing-4) var(--spacing-10);
  }

  .privacy-links ul {
    display: unset;
  }
}

.footer a {
  color: inherit;
}

.footer a:focus {
  border-radius: calc(2rem / 16);
  outline: 1px solid #fff;
  outline-offset: 2px;
}

.footer a:hover {
  color: var(--calitp-brand-yellow);
}

.footer nav a,
a:has(> img) {
  text-decoration: none;
}

.footer hr {
  margin: var(--spacing-1) var(--spacing-3);
  opacity: 1;
  width: unset;
}

/* 404 PAGE */
.wrapper-404 {
  gap: var(--spacing-8);
  margin-top: var(--spacing-8);
  margin-bottom: var(--spacing-8);
}

.heading-404 {
  max-width: calc(var(--spacing-10) * 5);
}

/* DATA-PLANS */
.estimator {
  border: 1px solid var(--dsdl-black);
  border-radius: 16px;
}

.estimator-2 {
  background-color: var(--dsdl-purple-20);
  border-color: var(--dsdl-purple-50);
}

/* TODO: consider further customizing border-radius etc. using appearance: none; */
input[type="checkbox"] {
  accent-color: var(--dsdl-indigo-80);
  height: var(--spacing-3);
  width: var(--spacing-3);
}

